# flash-cards

./: .gitignore  about.py  editcard.py  editor.py  flash-cards  flashcard.py  icon.xcf  main.py  meson.build  sample.json  update-pot
css/: style.css
po/: LINGUAS  POTFILES.in  de.po  en_GB.po  en_US.po  es.po  flash-cards.pot  fr.po  hu.po  it.po  la.po  meson.build  nl.po  no.po  pl_PL.po  pt.po  pt_BR.po  sv_SE.po
snap/: snapcraft.yaml
snap/gui/: flash-cards.desktop
src/: about.py  app.py  editcard.py  flash-cards.in  flashcard.py  meson.build
src/css/: style.css
